--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--Slick css-->
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 	<!--WS3 Css-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<!--font awesome-->
@@ -78,86 +76,73 @@
 
 	<!--Slideshow section-->
 
-<section class="container">
-<h2>Trails Gallery</h2>
-<div class="slide">
-<div class="slide-outer">
-<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
+	<section class="container">
+		<h2>Trails Gallery</h2>
+		<div class="slide">
+			<div class="slide-outer">
+				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
 
-<div class="slider-inner">
-<img src="assets/images/banner/cover-image.jpg" class="active" alt="Home">
-<img src="assets/images/banner/cleeve-banner.jpg" alt="Cleeve Hill">
-<img src="assets/images/banner/cheddar-banner.jpg" alt="Cheddar Gorge">
-<img src="assets/images/banner/coastal-banner.jpg" alt="West Somerset Coastal Path">
-<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park">
-<img src="assets/images/banner/blagdon-banner.jpg" alt="Blagdon Lake">
+				<div class="slider-inner">
+					<img src="assets/images/banner/cover-image.jpg" class="active" alt="Home">
+					<img src="assets/images/banner/cleeve-banner.jpg" alt="Cleeve Hill">
+					<img src="assets/images/banner/cheddar-banner.jpg" alt="Cheddar Gorge">
+					<img src="assets/images/banner/coastal-banner.jpg" alt="West Somerset Coastal Path">
+					<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park">
+					<img src="assets/images/banner/blagdon-banner.jpg" alt="Blagdon Lake">
 </div>
-<img src="assets/images/arrows/arrow-right.png" class="next" alt="Next">
+					<img src="assets/images/arrows/arrow-right.png" class="next" alt="Next">
 </div>
+				</div>
+	</section>
+
+
+
+	<!--Map section-->
+
+	<section class="map">
+		<h2>Somerset Map</h2>
+		<div></div>
+	</section>
+
+
+	<!--Footer section-->
+
+	<footer>
+		<div>
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 </div>
-</section>
+			<h4>>Somerset Trails</h4>
+			<div>
+				<h5>Social Media</h5>
+			</div>
+	</footer>
 
-	<!--<div class="slide">
-		<div><img src="../images/banner/cover-image.jpg"></div>
-			<div><img src="../images/banner/cheddar-banner.jpg"></div>
-				<div><img src="../images/banner/coastal-banner.jpg"></div>
-					<div><img src="../images/banner/cleeve-banner.jpg"></div>
-						<div><img src="../images/banner/exmoor-banner.jpg"></div>
-						</div>-->
+	<!--Scripts-->
 
+	<!--Jquery-->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-						<!--Map section-->
+	<!--Popper-->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+	</script>
 
-						<section class="map">
-							<h2>Somerset Map</h2>
-							<div></div>
-						</section>
+	<!--Bootstrap library-->
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+	<!--Navigation bar JS-->
+	<script type="text/javascript" src="assets/js/nav.js"></script>
 
-						<!--Footer section-->
+	<!--Maps JS-->
+	<script type="text/javascript" src="assets/js/maps.js"></script>
 
-						<footer>
-							<div>
-								<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-</div>
-								<h4>>Somerset Trails</h4>
-								<div>
-									<h5>Social Media</h5>
-								</div>
-						</footer>
+	<!--Slideshow JS-->
+	<script type="text/javascript" src="assets/js/slide.js"></script>
 
-						<!--Scripts-->
-
-						<!--Jquery-->
-						<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-
-						<!--Popper-->
-						<script type="text/javascript"
-							src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-
-						<!--Slick css-->
-						<script type="text/javascript"
-							src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-						<!--Bootstrap library-->
-						<script type="text/javascript"
-							src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-						<!--Navigation bar JS-->
-						<script type="text/javascript" src="assets/js/nav.js"></script>
-
-						<!--Maps JS-->
-						<script type="text/javascript" src="assets/js/maps.js"></script>
-
-						<!--Slideshow JS-->
-						<script type="text/javascript" src="assets/js/slide.js"></script>
-
-						<!--Google maps scripts-->
-						<script
-							src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
-						</script>
-						<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap">
-						</script>
+	<!--Google maps scripts-->
+	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
+	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap">
+	</script>
 
 
 </body>
