Edit css styling of headings

--- a/blagdon.html
+++ b/blagdon.html
@@ -47,16 +47,19 @@
 	<!--cover picture-->
 
 	<section class="blagdon-banner">
+    <br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 		</div>
 	</section>
+    
+    <br>
 
 	<!--Slideshow section -->
 
 
 	<section class="container">
-		<h2>Trails Gallery</h2>
+		<h2>Blagdon Lake</h2>
 		<div class="slide">
 			<div class="slide-outer">
 				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
