--- a/exmoor.html
+++ b/exmoor.html
@@ -44,9 +44,11 @@
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</nav>
 
+
 	<!--cover picture-->
 
 	<section class="exmoor-banner">
+    <br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
@@ -55,7 +57,8 @@
 
 
 	<section class="container">
-		<h2>Trails Gallery</h2>
+    <br>
+		<h2>Exmoor National Park</h2>
 		<div class="slide">
 			<div class="slide-outer">
 				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
