--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<!--cover picture-->
 
 	<section class="banner">
+    <br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
@@ -54,19 +55,12 @@
 
 	<section>
 		<div class="container">
-			<div id="introduction">
-				<h2><strong>Trails</strong></h2>
+			<div class="introduction">
+				<h2>Trails</h2>
 				<br>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-					printer
-					took a galley of type and scrambled it to make a type specimen book.
-					It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-					essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-					containing
-					Lorem Ipsum passages,
-					and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-					Ipsum.
+				<p>A trail is usually a path, track or unpaved lane or road. In the United Kingdom and the Republic of
+					Ireland path or footpath is the preferred term for a walking trail. The term is also applied, in
+					North America, to routes along rivers, and sometimes to highways.
 				</p>
 			</div>
 		</div>
@@ -77,7 +71,7 @@
 	<!--Slideshow section-->
 
 	<section class="container">
-		<h2>Trails Gallery</h2>
+		<h2>Gallery</h2>
 		<div class="slide">
 			<div class="slide-outer">
 				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
@@ -111,7 +105,7 @@
 		<div>
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 </div>
-			<h4>>Somerset Trails</h4>
+			<h4>Somerset Trails</h4>
 			<div>
 				<h5>Social Media</h5>
 			</div>
