--- a/cleeve-hill.html
+++ b/cleeve-hill.html
@@ -48,14 +48,17 @@
 	<!--cover picture-->
 
 	<section class="cleeve-banner">
+    <br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
 
+    <br>
+
 	<!--Slideshow section -->
 
 	<section class="container">
-		<h2>Trails Gallery</h2>
+		<h2>Cleeve Hill</h2>
 		<div class="slide">
 			<div class="slide-outer">
 				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
