--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -47,15 +47,18 @@
 	<!--cover picture-->
 
 	<section class="coastal-banner">
+    <br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
+
+    <br>
 
 	<!--Slideshow section -->
 
 
 	<section class="container">
-		<h2>Trails Gallery</h2>
+		<h2>Somerset Coatal Path</h2>
 		<div class="slide">
 			<div class="slide-outer">
 				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
