Edit slideshow structure and styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
-			<button class="dropbtn">Trails
+			<button class="dropbtn">Somerset Trails
  <i class="fa fa-caret-down"></i>
  </button>
 			<div class="dropdown-content">
@@ -68,7 +68,7 @@
 
 	<br>
 
-	<!--Slideshow section-->
+	<!--Slideshow section
 
 	<section class="container">
 		<h2>Gallery</h2>
@@ -87,7 +87,29 @@
 					<img src="assets/images/arrows/arrow-right.png" class="next" alt="Next">
 </div>
 				</div>
-	</section>
+	</section>-->
+
+    <h2 style="text-align:center">Multiple Slideshows</h2>
+
+<p>Slideshow 2:</p>
+<div class="slideshow-container">
+  <div class="mySlides2">
+    <img src="assets/images/banner/cover-image.jpg">
+  </div>
+
+  <div class="mySlides2">
+    <img src="assets/images/banner/cleeve-banner.jpg">
+  </div>
+
+  <div class="mySlides2">
+    <img src="assets/images/banner/cheddar-banner.jpg">
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+
+
 
 
 
