--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -30,7 +30,7 @@
 	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
-			<button class="dropbtn">Trails
+			<button class="dropbtn">Somerset Trails
  <i class="fa fa-caret-down"></i>
  </button>
 			<div class="dropdown-content">
