--- a/exmoor.html
+++ b/exmoor.html
@@ -48,7 +48,7 @@
 	<!--cover picture-->
 
 	<section class="exmoor-banner">
-    <br>
+		<br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
@@ -56,25 +56,39 @@
 	<!--Slideshow section -->
 
 
-	<section class="container">
-    <br>
-		<h2>Exmoor National Park</h2>
-		<div class="slide">
-			<div class="slide-outer">
-				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
+	<!--Slideshow section-->
 
-				<div class="slider-inner">
-					<img src="assets/images/banner/cover-image.jpg" class="active" alt="Home">
-					<img src="assets/images/banner/cleeve-banner.jpg" alt="Cleeve Hill">
-					<img src="assets/images/banner/cheddar-banner.jpg" alt="Cheddar Gorge">
-					<img src="assets/images/banner/coastal-banner.jpg" alt="West Somerset Coastal Path">
-					<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park">
-					<img src="assets/images/banner/blagdon-banner.jpg" alt="Blagdon Lake">
-</div>
-					<img src="assets/images/arrows/arrow-right.png" class="next" alt="Next">
-</div>
-				</div>
-	</section>
+	<h2>Automatic Slideshow</h2>
+	<p>Change image every 2 seconds:</p>
+
+	<div class="slideshow-container">
+
+		<div class="mySlides fade">
+			<div class="numbertext">1 / 3</div>
+			<img src="assets/images/banner/cover-image.jpg" style="width:100%">
+			<div class="text">Caption Text</div>
+		</div>
+
+		<div class="mySlides fade">
+			<div class="numbertext">2 / 3</div>
+			<img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
+			<div class="text">Caption Two</div>
+		</div>
+
+		<div class="mySlides fade">
+			<div class="numbertext">3 / 3</div>
+			<img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
+			<div class="text">Caption Three</div>
+		</div>
+
+	</div>
+	<br>
+
+	<div style="text-align:center">
+		<span class="dot"></span>
+		<span class="dot"></span>
+		<span class="dot"></span>
+	</div>
 
 	<!--<section class="cheddar-map">
     <div
@@ -112,7 +126,7 @@
 	<!--Bootstrap library-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    <!--Slideshow JS-->
+	<!--Slideshow JS-->
 	<script type="text/javascript" src="assets/js/slide.js"></script>
 
 	<!--Navigation bar JS-->
