--- a/index.html
+++ b/index.html
@@ -68,52 +68,42 @@
 
 	<br>
 
-	<!--Slideshow section
+	<!--Slideshow section-->
 
-	<section class="container">
-		<h2>Gallery</h2>
-		<div class="slide">
-			<div class="slide-outer">
-				<img src="assets/images/arrows/arrow-left.png" class="prev" alt="Prev">
+<h2>Automatic Slideshow</h2>
+<p>Change image every 2 seconds:</p>
 
-				<div class="slider-inner">
-					<img src="assets/images/banner/cover-image.jpg" class="active" alt="Home">
-					<img src="assets/images/banner/cleeve-banner.jpg" alt="Cleeve Hill">
-					<img src="assets/images/banner/cheddar-banner.jpg" alt="Cheddar Gorge">
-					<img src="assets/images/banner/coastal-banner.jpg" alt="West Somerset Coastal Path">
-					<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park">
-					<img src="assets/images/banner/blagdon-banner.jpg" alt="Blagdon Lake">
-</div>
-					<img src="assets/images/arrows/arrow-right.png" class="next" alt="Next">
-</div>
-				</div>
-	</section>-->
-
-    <h2 style="text-align:center">Multiple Slideshows</h2>
-
-<p>Slideshow 2:</p>
 <div class="slideshow-container">
-  <div class="mySlides2">
-    <img src="assets/images/banner/cover-image.jpg">
-  </div>
 
-  <div class="mySlides2">
-    <img src="assets/images/banner/cleeve-banner.jpg">
-  </div>
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="assets/images/banner/cover-image.jpg" style="width:100%">
+  <div class="text">Caption Text</div>
+</div>
 
-  <div class="mySlides2">
-    <img src="assets/images/banner/cheddar-banner.jpg">
-  </div>
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
 
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
 </div>
 
 
-
-
-
-	<!--Map section-->
+	<!--Map section
 
 	<section class="map">
 		<h2>Somerset Map</h2>
