Edit exmoor banner, slideshow styling and add dropdown button for bottom page navigation.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!--cover picture-->
 
 	<section class="banner">
-    <br>
+		<br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
@@ -70,47 +70,96 @@
 
 	<!--Slideshow section-->
 
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
-
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="assets/images/banner/cover-image.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+<div class="container">
+<div class="slide-intro">
+<br>
+	<h2>Gallery</h2>
+    <p>Checkout the trails below:</p>
+    <br>
+</div>
 </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
+	<div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
+		<div class="mySlides fade">
+			<div class="numbertext">1 / 6</div>
+			<img src="assets/images/banner/cover-image.jpg" style="width:100%">
+			<div class="text">HomePage</div>
+		</div>
 
-</div>
+		<div class="mySlides fade">
+			<div class="numbertext">2 / 6</div>
+			<img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
+			<button class="cleeve-hill.html">Cleeve Hill</button>
+		</div>
+
+		<div class="mySlides fade">
+			<div class="numbertext">3 / 6</div>
+			<img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
+            <button></button>
+			<div class="text">Cheddar Gorge</div>
+		</div>
+
+        <div class="mySlides fade">
+			<div class="numbertext">4 / 6</div>
+			<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
+            <button href="blagdon.html"></button>
+			<div class="text">Blagdon Lake</div>
+		</div>
+
+        <div class="mySlides fade">
+			<div class="numbertext">5 / 6</div>
+			<img src="assets/images/banner/coastal-banner.jpg" style="width:100%">
+            <button href="somerset-coastal.html"></button>
+			<div class="text">Somerset Coastal Path</div>
+		</div>
+
+        <div class="mySlides fade">
+			<div class="numbertext">6 / 6</div>
+			<img src="assets/images/banner/exmoor-banner.jpg" style="width:100%">
+            <button href="exmoor.html"></button>
+			<div class="text">Exmoor National Park</div>
+		</div>
+
+	</div>
+	<br>
+
+	<div style="text-align:center">
+		<span class="dot"></span>
+		<span class="dot"></span>
+		<span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+	</div>
+
 <br>
 
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-
-
-	<!--Map section
+	<!--Map section-->
 
 	<section class="map">
 		<h2>Somerset Map</h2>
 		<div></div>
 	</section>
 
+    <br>
 
+<section class="bottom-nav">
+    <div class="dropdown">
+  <button class="dropbtn">Trail navigation</button>
+  <div class="dropdown-content">
+    <a href="index.html">Home</a>
+    <a href="cleeve-hill.html">cleeve Hill</a>
+    <a href="cheddar-gorge.html">Cheddar Gorge</a>
+    <a href="blagdon.html">Blagdon Lake</a>
+    <a href="somerset-coastal.html">West Somerset Coastal Path</a>
+    <a href="exmoor.html">Exmoor National Park</a>
+  </div>
+</div>
+<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</section>
+
+<br>
 	<!--Footer section-->
 
 	<footer>
