Add slideshow picture for each results page& update styling and html formatting

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -34,7 +34,7 @@
  <i class="fa fa-caret-down"></i>
  </button>
 			<div class="dropdown-content">
-				<a href="cleeve-hill.html">Cleeve Hill</a>
+				<a href="staple.html">Staple Hill</a>
 				<a href="cheddar-gorge.html">Cheddar Gorge</a>
 				<a href="blagdon.html">Blagdon Lake</a>
 				<a href="somerset-coastal.html">Somerset Coastal Path</a>
@@ -56,29 +56,30 @@
 
 	<!--Slideshow section -->
 
-	<!--Slideshow section-->
-
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
+    	<div class="container">
+		<div class="slide-intro">
+			<br>
+			<h2>Cheddar Gorge</h2>
+			<p>Checkout Cheddar Gorge below:</p>
+			<br>
+</div>
+		</div>
 
 <div class="slideshow-container">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="assets/images/banner/cover-image.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <img src="assets/images/slideshow/gorge/gorge01.jpg" style="width:100%">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <img src="assets/images/slideshow/gorge/gorge02.jpg" style="width:100%">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="assets/images/slideshow/gorge/gorge03.jpg" style="width:100%">
 </div>
 
 </div>
