--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <i class="fa fa-caret-down"></i>
  </button>
 			<div class="dropdown-content">
-				<a href="cleeve-hill.html">Cleeve Hill</a>
+				<a href="staple.html">Staple Hill</a>
 				<a href="cheddar-gorge.html">Cheddar Gorge</a>
 				<a href="blagdon.html">Blagdon Lake</a>
 				<a href="somerset-coastal.html">Somerset Coastal Path</a>
@@ -149,7 +149,7 @@
   <button class="dropbtn">Trail navigation</button>
   <div class="dropdown-content">
     <a href="index.html">Home</a>
-    <a href="cleeve-hill.html">cleeve Hill</a>
+    <a href="staple.html">Staple Hill</a>
     <a href="cheddar-gorge.html">Cheddar Gorge</a>
     <a href="blagdon.html">Blagdon Lake</a>
     <a href="somerset-coastal.html">West Somerset Coastal Path</a>
@@ -162,7 +162,7 @@
 <br>
 	<!--Footer section-->
 
-	<footer>
+	<footer class="footer">
 		<div>
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 </div>
