--- a/blagdon.html
+++ b/blagdon.html
@@ -34,7 +34,7 @@
  <i class="fa fa-caret-down"></i>
  </button>
 			<div class="dropdown-content">
-				<a href="cleeve-hill.html">Cleeve Hill</a>
+				<a href="staple.html">Staple Hill</a>
 				<a href="cheddar-gorge.html">Cheddar Gorge</a>
 				<a href="blagdon.html">Blagdon Lake</a>
 				<a href="somerset-coastal.html">Somerset Coastal Path</a>
@@ -57,41 +57,44 @@
 
 	<!--Slideshow section -->
 
-	<!--Slideshow section-->
-
-	<h2>Automatic Slideshow</h2>
-	<p>Change image every 2 seconds:</p>
-
-	<div class="slideshow-container">
-
-		<div class="mySlides fade">
-			<div class="numbertext">1 / 3</div>
-			<img src="assets/images/banner/cover-image.jpg" style="width:100%">
-			<div class="text">Caption Text</div>
+	<div class="container">
+		<div class="slide-intro">
+			<br>
+			<h2>Blagdon Lake</h2>
+			<p>Checkout the Blagdon Lake below:</p>
+			<br>
+</div>
 		</div>
 
-		<div class="mySlides fade">
-			<div class="numbertext">2 / 3</div>
-			<img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
-			<div class="text">Caption Two</div>
+		<br>
+
+		<div class="slideshow-container">
+
+			<div class="mySlides fade">
+				<div class="numbertext">1 / 3</div>
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake01.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext">2 / 3</div>
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext">3 / 3</div>
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake03.jpg" style="width:100%">
+			</div>
+
+		</div>
+		<br>
+
+		<div style="text-align:center">
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
 		</div>
 
-		<div class="mySlides fade">
-			<div class="numbertext">3 / 3</div>
-			<img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
-			<div class="text">Caption Three</div>
-		</div>
-
-	</div>
-	<br>
-
-	<div style="text-align:center">
-		<span class="dot"></span>
-		<span class="dot"></span>
-		<span class="dot"></span>
-	</div>
-
-	<!--<section class="cheddar-map">
+		<!--<section class="cheddar-map">
     <div
 		<h2><strong>Cheddar gorge street view</strong></h2>
 		<iframe src="https://www.google.com/maps/embed/v1/streetview" key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
@@ -99,47 +102,47 @@
     </div>
 	</section>-->
 
-	<footer>
-		<div>
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-			<h5 href="index.html">Somerset Trails</h5>
-		</div>
-		<div>
-			<h5>Social Media</h5>
-		</div>
-		<link>
-		</link>
-		<link>
-		</link>
-	</footer>
+		<footer>
+			<div>
+				<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+				<h5 href="index.html">Somerset Trails</h5>
+			</div>
+			<div>
+				<h5>Social Media</h5>
+			</div>
+			<link>
+			</link>
+			<link>
+			</link>
+		</footer>
 
-	<script>
-	</script>
+		<script>
+		</script>
 
-	<!--Scripts-->
+		<!--Scripts-->
 
-	<!--Jquery-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+		<!--Jquery-->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-	<!--Popper-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+		<!--Popper-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-	<!--Bootstrap library-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		<!--Bootstrap library-->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-	<!--Slideshow JS-->
-	<script type="text/javascript" src="assets/js/slide.js"></script>
+		<!--Slideshow JS-->
+		<script type="text/javascript" src="assets/js/slide.js"></script>
 
-	<!--Navigation bar JS-->
-	<script src="assets/js/nav.js"></script>
+		<!--Navigation bar JS-->
+		<script src="assets/js/nav.js"></script>
 
-	<!--Maps JS-->
-	<script src="assets/js/maps.js"></script>
+		<!--Maps JS-->
+		<script src="assets/js/maps.js"></script>
 
-	<!--Google maps scripts-->
-	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
-	</script>
+		<!--Google maps scripts-->
+		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
+		</script>
 
 </body>
 
