--- a/index.html
+++ b/index.html
@@ -70,134 +70,136 @@
 
 	<!--Slideshow section-->
 
-<div class="container">
-<div class="slide-intro">
-<br>
-	<h2>Gallery</h2>
-    <p>Checkout the trails below:</p>
-    <br>
+	<div class="container">
+		<div class="slide-intro">
+			<br>
+			<h2>Gallery</h2>
+			<p>Checkout the trails below:</p>
+			<br>
 </div>
-</div>
-
-	<div class="slideshow-container">
-
-		<div class="mySlides fade">
-			<div class="numbertext">1 / 6</div>
-			<img src="assets/images/banner/cover-image.jpg" style="width:100%">
-			<div class="text">HomePage</div>
 		</div>
 
-		<div class="mySlides fade">
-			<div class="numbertext">2 / 6</div>
-			<img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
-			<button class="cleeve-hill.html">Cleeve Hill</button>
-		</div>
+		<div class="slideshow-container">
 
-		<div class="mySlides fade">
-			<div class="numbertext">3 / 6</div>
-			<img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
-            <button></button>
-			<div class="text">Cheddar Gorge</div>
-		</div>
-
-        <div class="mySlides fade">
-			<div class="numbertext">4 / 6</div>
-			<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
-            <button href="blagdon.html"></button>
-			<div class="text">Blagdon Lake</div>
-		</div>
-
-        <div class="mySlides fade">
-			<div class="numbertext">5 / 6</div>
-			<img src="assets/images/banner/coastal-banner.jpg" style="width:100%">
-            <button href="somerset-coastal.html"></button>
-			<div class="text">Somerset Coastal Path</div>
-		</div>
-
-        <div class="mySlides fade">
-			<div class="numbertext">6 / 6</div>
-			<img src="assets/images/banner/exmoor-banner.jpg" style="width:100%">
-            <button href="exmoor.html"></button>
-			<div class="text">Exmoor National Park</div>
-		</div>
-
-	</div>
-	<br>
-
-	<div style="text-align:center">
-		<span class="dot"></span>
-		<span class="dot"></span>
-		<span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-	</div>
-
-<br>
-
-	<!--Map section-->
-
-	<section class="map">
-		<h2>Somerset Map</h2>
-		<div></div>
-	</section>
-
-    <br>
-
-<section class="bottom-nav">
-    <div class="dropdown">
-  <button class="dropbtn">Trail navigation</button>
-  <div class="dropdown-content">
-    <a href="index.html">Home</a>
-    <a href="staple.html">Staple Hill</a>
-    <a href="cheddar-gorge.html">Cheddar Gorge</a>
-    <a href="blagdon.html">Blagdon Lake</a>
-    <a href="somerset-coastal.html">West Somerset Coastal Path</a>
-    <a href="exmoor.html">Exmoor National Park</a>
-  </div>
-</div>
-<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-</section>
-
-<br>
-	<!--Footer section-->
-
-	<footer class="footer">
-		<div>
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-</div>
-			<h4>Somerset Trails</h4>
-			<div>
-				<h5>Social Media</h5>
+			<div class="mySlides fade">
+				<div class="numbertext">1 / 6</div>
+				<img src="assets/images/banner/cover-image.jpg" style="width:100%">
+				<div class="text">HomePage</div>
 			</div>
-	</footer>
 
-	<!--Scripts-->
+			<div class="mySlides fade">
+				<div class="numbertext">2 / 6</div>
+				<img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
+				<button class="cleeve-hill.html">Cleeve Hill</button>
+			</div>
 
-	<!--Jquery-->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+			<div class="mySlides fade">
+				<div class="numbertext">3 / 6</div>
+				<img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
+				<button></button>
+				<div class="text">Cheddar Gorge</div>
+			</div>
 
-	<!--Popper-->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-	</script>
+			<div class="mySlides fade">
+				<div class="numbertext">4 / 6</div>
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
+				<button href="blagdon.html"></button>
+				<div class="text">Blagdon Lake</div>
+			</div>
 
-	<!--Bootstrap library-->
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+			<div class="mySlides fade">
+				<div class="numbertext">5 / 6</div>
+				<img src="assets/images/banner/coastal-banner.jpg" style="width:100%">
+				<button href="somerset-coastal.html"></button>
+				<div class="text">Somerset Coastal Path</div>
+			</div>
 
-	<!--Navigation bar JS-->
-	<script type="text/javascript" src="assets/js/nav.js"></script>
+			<div class="mySlides fade">
+				<div class="numbertext">6 / 6</div>
+				<img src="assets/images/banner/exmoor-banner.jpg" style="width:100%">
+				<button href="exmoor.html"></button>
+				<div class="text">Exmoor National Park</div>
+			</div>
 
-	<!--Maps JS-->
-	<script type="text/javascript" src="assets/js/maps.js"></script>
+		</div>
+		<br>
 
-	<!--Slideshow JS-->
-	<script type="text/javascript" src="assets/js/slide.js"></script>
+		<div style="text-align:center">
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+		</div>
 
-	<!--Google maps scripts-->
-	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
-	</script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap">
-	</script>
+		<br>
+
+		<!--Map section-->
+
+		<section class="map">
+			<h2>Somerset Map</h2>
+			<div></div>
+		</section>
+
+		<!--Bottom navigation, for user flexibility -->
+
+		<br>
+
+		<section class="bottom-nav">
+			<div class="dropup">
+				<button class="dropbtn">Explore</button>
+				<div class="dropup-content">
+					<a href="staple.html">Staple Hill</a>
+					<a href="cheddar-gorge.html">Cheddar Gorge</a>
+					<a href="blagdon.html">Blagdon Lake</a>
+					<a href="somerset-coastal.html">West Somerset Coastal Path</a>
+					<a href="exmoor.html">Exmoor National Park</a>
+				</div>
+			</div>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+		</section>
+
+		<br>
+		<!--Footer section-->
+
+		<footer class="footer">
+			<div>
+				<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+</div>
+				<h4>Somerset Trails</h4>
+				<div>
+					<h5>Social Media</h5>
+				</div>
+		</footer>
+
+		<!--Scripts-->
+
+		<!--Jquery-->
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+		<!--Popper-->
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+		</script>
+
+		<!--Bootstrap library-->
+		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+		</script>
+
+		<!--Navigation bar JS-->
+		<script type="text/javascript" src="assets/js/nav.js"></script>
+
+		<!--Maps JS-->
+		<script type="text/javascript" src="assets/js/maps.js"></script>
+
+		<!--Slideshow JS-->
+		<script type="text/javascript" src="assets/js/slide.js"></script>
+
+		<!--Google maps scripts-->
+		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
+		</script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap">
+		</script>
 
 
 </body>
