--- a/staple.html
+++ b/staple.html
@@ -100,6 +100,27 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
  </div>
 </section>-->
 
+					<!--Bottom navigation button, for increased user flexibility-->
+
+					<br>
+
+					<section class="bottom-nav">
+						<div class="dropup">
+							<button class="dropbtn">Explore</button>
+                            <hr>
+							<div class="dropup-content">
+								<a href="index.html">Home</a>
+								<a href="cheddar-gorge.html">Cheddar Gorge</a>
+								<a href="blagdon.html">Blagdon Lake</a>
+								<a href="somerset-coastal.html">West Somerset Coastal Path</a>
+								<a href="exmoor.html">Exmoor National Park</a>
+							</div>
+						</div>
+						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+					</section>
+
+					<br>
+
 					<footer>
 						<div>
 							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
