--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -46,17 +46,17 @@
 	<!--cover picture-->
 
 	<section class="cheddar-banner">
-    <br>
+		<br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 
 	</section>
 
-<br>
+	<br>
 
 	<!--Slideshow section -->
 
-    	<div class="container">
+	<div class="container">
 		<div class="slide-intro">
 			<br>
 			<h2>Cheddar Gorge</h2>
@@ -65,34 +65,34 @@
 </div>
 		</div>
 
-<div class="slideshow-container">
+		<div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="assets/images/slideshow/gorge/gorge01.jpg" style="width:100%">
+			<div class="mySlides fade">
+				<div class="numbertext">1 / 3</div>
+				<img src="assets/images/slideshow/gorge/gorge01.jpg" style="width:100%">
 </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="assets/images/slideshow/gorge/gorge02.jpg" style="width:100%">
+				<div class="mySlides fade">
+					<div class="numbertext">2 / 3</div>
+					<img src="assets/images/slideshow/gorge/gorge02.jpg" style="width:100%">
 </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="assets/images/slideshow/gorge/gorge03.jpg" style="width:100%">
+					<div class="mySlides fade">
+						<div class="numbertext">3 / 3</div>
+						<img src="assets/images/slideshow/gorge/gorge03.jpg" style="width:100%">
 </div>
 
-</div>
-<br>
+					</div>
+					<br>
 
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
+					<div style="text-align:center">
+						<span class="dot"></span>
+						<span class="dot"></span>
+						<span class="dot"></span>
+					</div>
 
 
-	<!--<section class="cheddar-map">
+					<!--<section class="cheddar-map">
     <div
 		<h2><strong>Cheddar gorge street view</strong></h2>
 		<iframe src="https://www.google.com/maps/embed/v1/streetview" key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
@@ -100,47 +100,68 @@
     </div>
 	</section>-->
 
-	<footer>
-		<div>
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-			<h5 href="index.html">Somerset Trails</h5>
-		</div>
-		<div>
-			<h5>Social Media</h5>
-		</div>
-		<link>
-		</link>
-		<link>
-		</link>
-	</footer>
+					<br>
 
-	<script>
-	</script>
+					<!--Bottom navigation, for user flexibility-->
 
-	<!--Scripts-->
+					<section class="bottom-nav">
+						<div class="dropup">
+							<button class="dropbtn">Explore</button>
+							<div class="dropup-content">
+								<a href="index.html">Home</a>
+								<a href="staple.html">Staple Hill</a>
+								<a href="blagdon.html">Blagdon Lake</a>
+								<a href="somerset-coastal.html">West Somerset Coastal Path</a>
+								<a href="exmoor.html">Exmoor National Park</a>
+							</div>
+						</div>
+						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+					</section>
 
-	<!--Jquery-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+					<br>
 
-	<!--Popper-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+					<footer>
+						<div>
+							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+							<h5 href="index.html">Somerset Trails</h5>
+						</div>
+						<div>
+							<h5>Social Media</h5>
+						</div>
+						<link>
+						</link>
+						<link>
+						</link>
+					</footer>
 
-	<!--Bootstrap library-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+					<script>
+					</script>
 
-    <!--Slideshow JS-->
-	<script type="text/javascript" src="assets/js/slide.js"></script>
+					<!--Scripts-->
 
-	<!--Navigation bar JS-->
-	<script src="assets/js/nav.js"></script>
+					<!--Jquery-->
+					<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-	<!--Maps JS-->
-	<script src="assets/js/maps.js"></script>
+					<!--Popper-->
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-	<!--Google maps scripts-->
-	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
-	</script>
+					<!--Bootstrap library-->
+					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+					<!--Slideshow JS-->
+					<script type="text/javascript" src="assets/js/slide.js"></script>
+
+					<!--Navigation bar JS-->
+					<script src="assets/js/nav.js"></script>
+
+					<!--Maps JS-->
+					<script src="assets/js/maps.js"></script>
+
+					<!--Google maps scripts-->
+					<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
+					</script>
+					<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
+					</script>
 
 </body>
 
