Update staple.html image& slideshow javascript

--- a/index.html
+++ b/index.html
@@ -84,41 +84,37 @@
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 6</div>
 				<img src="assets/images/banner/cover-image.jpg" style="width:100%">
-				<div class="text">HomePage</div>
+				<button class="btn" href="index.html">HomePage</button>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 6</div>
-				<img src="assets/images/banner/cleeve-banner.jpg" style="width:100%">
-				<button class="cleeve-hill.html">Cleeve Hill</button>
+				<img src="assets/images/banner/staple-banner.jpg" style="width:100%">
+				<button class="btn" href="staple.html">Staple Hill</button>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<img src="assets/images/banner/cheddar-banner.jpg" style="width:100%">
-				<button></button>
-				<div class="text">Cheddar Gorge</div>
+				<img src="assets/images/slideshow/gorge/gorge02.jpg" style="width:100%">
+				<button class="btn" href="cheddar-gorge.html">Cheddar Gorge</button>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 6</div>
 				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
-				<button href="blagdon.html"></button>
-				<div class="text">Blagdon Lake</div>
+				<button class="btn" href="blagdon.html">Blagdon Lake</button>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">5 / 6</div>
 				<img src="assets/images/banner/coastal-banner.jpg" style="width:100%">
-				<button href="somerset-coastal.html"></button>
-				<div class="text">Somerset Coastal Path</div>
+				<button class="btn" href="somerset-coastal.html">Somerset Coastal Path</button>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">6 / 6</div>
 				<img src="assets/images/banner/exmoor-banner.jpg" style="width:100%">
-				<button href="exmoor.html"></button>
-				<div class="text">Exmoor National Park</div>
+				<button class="btn" href="exmoor.html">Exmoor National Park</div>
 			</div>
 
 		</div>
